fix : ontouch close function on mobile

--- a/index.css
+++ b/index.css
@@ -319,6 +319,7 @@ html {
   border: none;
   color: white;
   cursor: pointer;
+  border-radius: 2px;
   padding: 5px;
 }
 
@@ -588,6 +589,7 @@ html {
 
 .av_close {
   background: none;
+  border-radius: 2px;
   border: none;
   color: white;
   font-size: 16px;
@@ -696,6 +698,7 @@ html {
 }
 
 .notepad-close {
+  border-radius: 2px;
   background: none;
   border: none;
   color: white;
